Fix testimonials section on mobile

--- a/css/components/_testimonials.scss
+++ b/css/components/_testimonials.scss
@@ -8,6 +8,7 @@
   // animation: scroll 50s linear infinite;
   padding: 5px;
   padding-top: 60px;
+  overflow: hidden;
 
   &:after {
     position: absolute;
